Droplet deployment update

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,27 @@
-# === LureKit Environment Configuration ===
-
-# Fully-qualified subdomains
+# Subdomain for phishing payload delivery (e.g., email links)
 PHISH_DOMAIN=phish.yourdomain.com
+
+# Subdomain for the landing page (proxied by redirector)
 REDIRECT_DOMAIN=login.yourdomain.com
+
+# Subdomain for Evilginx2 (optional, comment out if unused)
+EVILGINX_DOMAIN=session.yourdomain.com
 
 # Mailgun SMTP credentials
 MAILGUN_SMTP_USER=postmaster@yourdomain.com
 MAILGUN_SMTP_PASS=your-mailgun-smtp-password
 
-# GoPhish admin panel port (defaults to 3333)
-GOPHISH_ADMIN_PORT=3333
-
-# GeoIP filter region (ISO country code, e.g., GB, US, etc.)
+# Country code (ISO) for who can access the phish page (e.g., GB, US)
 ALLOWED_COUNTRY=GB
 
-# DigitalOcean API token (used by Terraform)
-DO_TOKEN=your-digitalocean-token
+# The port for GoPhish admin interface (tunneled)
+GOPHISH_ADMIN_PORT=3333
+
+# DigitalOcean API token for Terraform
+DO_TOKEN=TOKEN
+
+# SSH public key to authorize access to the VPS instances
+PUBLIC_SSH_KEY=PUBLIC_KEY
+
+# SSH private key path (used by Ansible)
+PRIVATE_SSH_KEY=PRIVATE_KEY
